# Python-Network

./: .env.example  .gitignore  Dockerfile  README.md  action.yml  asn-list.txt  bot_telegram.py  cisco_xe.py  ec2_des.py  ec2_description.py  huawei.py  pyproject.toml  requirements.txt  router-policy.py  vyos.py
.github/workflows/: codeql-analysis.yml  deploy-python-network-ecs.yml  notification.yml  python-app.yml  sonar-scan.yml  test-ovpn.yml  trivy-scan.yml
Telegram-bot/: bot_telegram.py
Telegram-bot/Aws/: ec2_description.py  ecs_description.py
Telegram-bot/networking/: cisco_xe.py  cisco_xr.py  huawei.py  juniper.py
telegram_bot/: bot_telegram.py
telegram_bot/aws/: ec2_description.py  ecs_description.py
telegram_bot/networking/: cisco_xr.py  huawei.py  router-policy.py  testesonar.py  testsonar.py  vyos.py
terraform-network/: ecs.tf  iam.tf  variables.tf
