[tool.poetry]
name = "Python-Network"
version = "0.1.0"
description = ""
authors = ["Guerlielton Campos <guerlielton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "3.6.3"
boto3 = "1.17.33"
botocore = "1.20.33"
certifi = "2020.12.5"
chardet = "4.0.0"
idna = "2.10"
jmespath = "0.10.0"
python-dateutil = "2.8.1"
python-dotenv = "0.15.0"
python-telegram-bot = "13.4.1"
pytz = "2021.1"
requests = "2.25.1"
s3transfer = "0.3.6"
six = "1.15.0"
tornado = "6.1"
tzlocal = "2.1"
urllib3 = "1.26.4"
pytelegrambotapi = "4.1.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"